--- a/_config.yml
+++ b/_config.yml
@@ -94,10 +94,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Lydia"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "I'm a **FE developer** dreamer.
+."
+  location         : #"Somewhere"
   email            :
   links:
     - label: "Email"
